trunk/Source/include/OpenGL1x.hpp


extern "C" void __stdcall glMap1d(unsigned target, double u1, double u2, int stride, int order, System::PDouble points);

extern "C" void __stdcall glMap1f(unsigned target, float u1, float u2, int stride, int order, System::PSingle points);

extern "C" void __stdcall glMap2d(unsigned target, double u1, double u2, int ustride, int uorder, double v1, double v2, int vstride, int vorder, System::PDouble points);

extern "C" void __stdcall glMap2f(unsigned target, float u1, float u2, int ustride, int uorder, float v1, float v2, int vstride, int vorder, System::PSingle points);

extern "C" void __stdcall glMapGrid1d(int un, double u1, double u2);

extern "C" void __stdcall glMapGrid1f(int un, float u1, float u2);

extern "C" void __stdcall glMapGrid2d(int un, double u1, double u2, int vn, double v1, double v2);

extern "C" void __stdcall glMapGrid2f(int un, float u1, float u2, int vn, float v1, float v2);

extern "C" void __stdcall glMaterialf(unsigned face, unsigned pname, float param);

extern "C" void __stdcall glMaterialfv(unsigned face, unsigned pname, System::PSingle params);

extern "C" void __stdcall glMateriali(unsigned face, unsigned pname, int param);

extern "C" void __stdcall glMaterialiv(unsigned face, unsigned pname, Opengltokens::PGLint params);

extern "C" void __stdcall glMatrixMode(unsigned mode);

extern "C" void __stdcall glMultMatrixd(System::PDouble m);

extern "C" void __stdcall glMultMatrixf(System::PSingle m);

extern "C" void __stdcall glNewList(unsigned list, unsigned mode);

extern "C" void __stdcall glNormal3b(System::Int8 nx, System::Int8 ny, System::Int8 nz);

extern "C" void __stdcall glNormal3bv(Opengltokens::PGLbyte v);

extern "C" void __stdcall glNormal3d(double nx, double ny, double nz);

extern "C" void __stdcall glNormal3dv(System::PDouble v);

extern "C" void __stdcall glNormal3f(float nx, float ny, float nz);

extern "C" void __stdcall glNormal3fv(System::PSingle v);

extern "C" void __stdcall glNormal3i(int nx, int ny, int nz);

extern "C" void __stdcall glNormal3iv(Opengltokens::PGLint v);

extern "C" void __stdcall glNormal3s(short nx, short ny, short nz);

extern "C" void __stdcall glNormal3sv(Opengltokens::PGLshort v);

extern "C" void __stdcall glNormalPointer(unsigned atype, int stride, void * data);

extern "C" void __stdcall glOrtho(double left, double right, double bottom, double top, double zNear, double zFar);

extern "C" void __stdcall glPassThrough(float token);

extern "C" void __stdcall glPixelMapfv(unsigned map, int mapsize, System::PSingle values);

extern "C" void __stdcall glPixelMapuiv(unsigned map, int mapsize, Opengltokens::PGLuint values);

extern "C" void __stdcall glPixelMapusv(unsigned map, int mapsize, System::PWord values);

extern "C" void __stdcall glPixelTransferf(unsigned pname, float param);

extern "C" void __stdcall glPixelTransferi(unsigned pname, int param);

extern "C" void __stdcall glPixelZoom(float xfactor, float yfactor);

extern "C" void __stdcall glPolygonStipple(System::PByte mask);

extern "C" void __stdcall glPopAttrib(void);

extern "C" void __stdcall glPopClientAttrib(void);

extern "C" void __stdcall glPopMatrix(void);

extern "C" void __stdcall glPopName(void);

extern "C" void __stdcall glPrioritizeTextures(int n, Opengltokens::PGLuint textures, Opengltokens::PGLclampf priorities);

extern "C" void __stdcall glPushAttrib(unsigned mask);

extern "C" void __stdcall glPushClientAttrib(unsigned mask);

extern "C" void __stdcall glPushMatrix(void);

extern "C" void __stdcall glPushName(unsigned name);